<resources>
    <string name="app_name">HairDo</string>
    <string name="LogInTitle">Log In</string>
    <string name="LogInTitlecus">Customer Log In</string>
    <string name="LogInTitlesalon">Salon Log In</string>
    <string name="userName">Email</string>
    <string name="password">Password</string>
    <string name="forgetPassword">Forgot Password?</string>
    <string name="dontHaveAccount">Don\'t have account?</string>
    <string name="signup">Sign Up</string>
    <string name="description">Image</string>
    <string name="saloonregister">Register As Salon</string>
    <string name="customerregister">Register As Customer</string>
    <string name="offers">OFFERS</string>
    <string name="offericon">10% OFF</string>
    <string name="salonname">Salon Name</string>
    <string name="address">Address</string>
    <string name="contactnumber">Contact Number</string>
    <string name="salon">Salon</string>
    <string name="register">Register</string>
    <string name="user">User</string>
    <string name="username">User Name</string>
    <string name="acceptTerms">Accept Terms And Conditions</string>
    <string name="otp">OTP</string>
    <string name="resendOTP">Resend OTP</string>
    <string name="verify">VERIFY</string>
    <string name="title_activity_salon_profile">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Setting</string>
    <string name="todayAppointment">TODAY\'S APPOINTMENT</string>
    <string name="total">Total</string>
    <string name="completed">Completed</string>
    <string name="upComingAppintments">UPCOMING APPOINTMENTS</string>
    <string name="paymentSummary">PAYMENT SUMMARY</string>
    <string name="todayPayout">TODAY PAYOUT</string>
    <string name="previousPayout">PREVIOUS PAYOUT</string>
    <string name="manageServices">MANAGE SERVICES</string>
    <string name="customerReview">CUSTOMER REVIEW</string>
    <string name="manageOffers">MANAGE OFFERS</string>
    <string name="manageUpcomingAppointments">MANAGE APPOINTMENTS</string>
    <string name="viewCalendar">VIEW CALENDAR</string>
    <string name="summaryEvents">SUMMARY EVENTS</string>
    <string name="editDetails">EDIT DETAILS</string>
    <string name="logout">LOG OUT</string>
    <string name="services">SERVICES</string>
    <string name="reviews">REVIEWS</string>
    <string name="serviceName">Service Name</string>
    <string name="add">ADD</string>
    <string name="reply">REPLY</string>
    <string name="cancelAppointment">Cancel Appointment</string>
    <string name="updateStatus">Update</string>
    <string name="appointmentStatus">Appointment Status</string>
    <string name="totalCompletion">Total Completion</string>
    <string name="totalCancalation">Total Cancellation</string>
    <string name="totalPendings">Total Pending</string>
    <string name="totalEarnings">Total Earnings</string>
    <string name="tv_Calendar">CALENDAR</string>
    <string name="btn_holidays">Holidays</string>
    <string name="tv_holidays">HOLIDAYS</string>
    <string name="update">Update</string>
    <string name="deleteAccont">Delete Account</string>
    <string name="cardNumber">Card Number</string>
    <string name="cardHolderName">Card Holder Name</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="cvc">CVC</string>
    <string name="emailOfDev">infoHairDo@gmail.com</string>
    <string name="phoneNumOfDev">021-226-1382</string>
    <string name="addressOfDev">Main Street, Colombo 9</string>
    <string name="contactUs">Contact Us</string>
    <string name="remove">Remove</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="save_changes">Save Changes</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="location">Location</string>
    <string name="viewLocation">View Location</string>
    <string name="reserve">Reserve</string>
    <string name="gallery">Gallery</string>
    <string name="search">search..</string>
    <string name="addPhoto">Add Photo</string>
    <string name="delete">Delete</string>\
    <string name="common">Common</string>\

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_upcomingA">Upcoming Appointment</string>
    <string name="menu_Appointment_summary">Summary</string>
    <string name="menu_Notification">Notification</string>
    <string name="menu_Payments">Payments</string>
    <string name="menu_logout">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Time">Time</string>
    <string name="PickTime">PickTime</string>

</resources>